2005-10-07	Gaius Mulley <gaius@glam.ac.uk>

	* replaced MathLib.mod onto the list of ULM modules	  
          which prior to installation.
	* fixed ggc bug so that types are remembered and marked.
	  These types are declared in M2GCCDeclare.mod before
	  code generation takes place and do not experience the
	  `push_decl' function.

2005-10-03	Michael H Lambert <lambert@psc.edu>

	* removed $(LIBS) from the dependancies of cc1gm2 in
	  stage1, stage2 and stage3.

2005-09-30	Gaius Mulley <gaius@glam.ac.uk>

	* fixed bug in gm2/gm2-libs/FpuIO.mod so that the sign is
	  not prepended to the string if the number is positive.
	* fixed gm2/gm2-libs-pim/Break.c to use HAVE_STDLIB_H and
	  HAVE_MALLOC_H as detected by the configure script.
	* removed ulm-lib-gm2/std/MathLib.mod from the build
	  process as a temporary work around to get gm2 working
	  under opendarwin.

2005-09-27	Gaius Mulley <gaius@glam.ac.uk>

	* finally fixed _toupper porting problem in p2c as reported
	  by Thomas Ahn <TAhnMaple@gmx.de>, Ed Smith-Rowland
	  <3dw4rd@verizon.net>, John o goyo <jgoyo@ca.inter.net>,
          Eduardo Abela <eabela@mac.com>, John Calley
	  <calleys@iquest.net> and many others.
	* finally fixed the linking problem when building under
	  opendarwin. I suspect this will fix the same problems
	  under MacOS.

2005-09-16	Gaius Mulley <gaius@glam.ac.uk>

	* implemented -Wpositive-mod-floor-div option
	* updated gm2/gm2.texi and added many switch testing
	  regression tests.

2005-09-13	Gaius Mulley <gaius@glam.ac.uk>

	* implemented REM
	* implemented MOD, DIV, / as per ISO, PIM2, PIM3, PIM4
	* updated gm2/gm2.texi documentation to reflect the rules

2005-09-12	Gaius Mulley <gaius@glam.ac.uk>

	* fixed bug reported by John B. Wallace, Jr <wallacjb@enter.net>
	  testsuite/gm2/pim/options/bounds/fail/IdentifierBug.mod
	* fixed bug reported by John B. Wallace, Jr <wallacjb@enter.net>
	  testsuite/gm2/testsuite/gm2/pim/pass/ABSBug.mod