@@ -3,4 +3,6 @@ AC_INIT(gccgm2.c, 0.49, gm2@glam.ac.uk)
 AC_CONFIG_HEADER(gm2config.h:gm2config.h.in)
 AC_PATH_PROGS(AR_PATH, ${AR}, ar)
 AC_DEFINE_UNQUOTED(AR_PATH, "$AR_PATH", the path to target archiver)
+AC_PATH_PROGS(RANLIB_PATH, ${RANLIB}, ranlib)
+AC_DEFINE_UNQUOTED(RANLIB_PATH, "$RANLIB_PATH", the path to target ranlib)
 AC_OUTPUT
