@@ -3,6 +3,9 @@
 /* the path to target archiver */
 #undef AR_PATH
 
+/* the path to target ranlib */
+#undef RANLIB_PATH
+
 /* Define to the address where bug reports for this package should be sent. */
 #undef PACKAGE_BUGREPORT
 
